<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_card_view_first"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:transitionName="@string/weather_entry_card"
    android:layout_marginTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:orientation="vertical"
            android:layout_gravity="left">

            <TextView
                android:text="Chicago"
                android:id="@+id/text_view_city_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/activity_vertical_margin"
                android:layout_marginTop="16dp"
                android:paddingLeft="16dp"
                android:textSize="24sp"
                android:textStyle="bold|italic"
                android:transitionName="@string/weather_entry_city_name"/>

            <TextView
                android:id="@+id/text_view_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:paddingLeft="16dp"
                android:textSize="12sp"
                android:transitionName="@string/weather_entry_date"/>

            <TextView
                android:text="Current: 64"
                android:id="@+id/text_view_temp_current"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/activity_vertical_margin"
                android:layout_marginTop="16dp"
                android:paddingLeft="16dp"
                android:transitionName="@string/weather_entry_temp_current"/>

            <TextView
                android:text="Low: 55"
                android:id="@+id/text_view_temp_low"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/activity_vertical_margin"
                android:layout_marginTop="16dp"
                android:paddingLeft="16dp"
                android:transitionName="@string/weather_entry_temp_low"/>

            <TextView
                android:text="High: 67"
                android:id="@+id/text_view_temp_high"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/activity_vertical_margin"
                android:layout_marginTop="16dp"
                android:paddingLeft="16dp"
                android:transitionName="@string/weather_entry_temp_high"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:orientation="vertical"
            android:layout_gravity="end">

            <ImageView
                android:id="@+id/image_view_weather_icon"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.75"
                android:src="@drawable/cloudy"
                android:transitionName="@string/weather_entry_icon"/>

            <TextView
                android:text="Cloudy"
                android:id="@+id/text_view_weather_description"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight=".25"
                android:layout_gravity="center"
                android:minHeight="@dimen/activity_vertical_margin"
                android:transitionName="@string/weather_entry_description"/>

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>